--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,14 +1,31 @@
 server.port=8899
 #indicates database, host, port and database name
-spring.datasource.url=jdbc:sqlserver://localhost:1434;encrypt=true;trustServerCertificate=true;autoReconnect=true;useSSL=false;databaseName=crud_db
+#spring.datasource.url=jdbc:sqlserver://127.0.0.1:1434;databaseName=crud_db;encrypt=true;trustServerCertificate=true;autoReconnect=true;useSSL=false
+#spring.datasource.url=jdbc:sqlserver://localhost:1434;databaseName=crud_db;useSSL=false;autoReconnect=true;trustServerCertificate=true;autoReconnect=true;useSSL=false
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
 
 #username & password
-spring.datasource.username=sa
-spring.datasource.password=Cn$#123#
+#spring.datasource.username=root
+#spring.datasource.password=Cn$#123#
 
 #Hibernate for JPA implementation, SQLServerDialect for SQL Server
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 #ddl-auto for database initialization. update will create the database, and also trigger update
 #for production value should be validate.
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+
+#spring.jpa.properties.hibernate.c3p0.min_size = 5
+#spring.jpa.properties.hibernate.c3p0.max_size = 20
+#spring.jpa.properties.hibernate.c3p0.timeout = 600
+
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost/crud_db?useSSL=false
+#username & password
+spring.datasource.username=root
+spring.datasource.password=Cn$#123#
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
