--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -22,10 +22,10 @@ server.port=8899
 #spring.jpa.properties.hibernate.c3p0.timeout = 600
 
 #MySQL
-spring.datasource.url=jdbc:mysql://localhost/crud_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/pr_mg_sys?useSSL=false
 #username & password
 spring.datasource.username=root
-spring.datasource.password=Cn$#123#
+spring.datasource.password=sujon555
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
