--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -29,3 +29,4 @@ spring.datasource.password=sujon555
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.open-in-view = false
