--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -25,7 +25,7 @@ server.port=8899
 spring.datasource.url=jdbc:mysql://localhost/pr_mg_sys?useSSL=false
 #username & password
 spring.datasource.username=root
-spring.datasource.password=sujon555
+spring.datasource.password=Cn$#123#
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
