--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -25,8 +25,9 @@ server.port=8899
 spring.datasource.url=jdbc:mysql://localhost/pr_mg_sys?useSSL=false
 #username & password
 spring.datasource.username=root
-spring.datasource.password=Cn$#123#
+spring.datasource.password=sujon555
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.open-in-view = false
+spring.jpa.show-sql=true
