--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -25,10 +25,10 @@ server.port=8899
 spring.datasource.url=jdbc:mysql://localhost/pr_mg_sys?useSSL=false
 #username & password
 spring.datasource.username=root
-#spring.datasource.password=sujon555
-spring.datasource.password=Cn$#123#
+spring.datasource.password=sujon555
+#spring.datasource.password=Cn$#123#
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= validate
 spring.jpa.open-in-view = false
 spring.jpa.show-sql=true
